--- a/LoadBalancer.ipynb
+++ b/LoadBalancer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJXrrLmnnK2WHSTH0RKx1p",
+      "authorship_tag": "ABX9TyOe7MoJNIZv4vIiGzsNciL6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,12 +49,12 @@
       "source": [
         "\n",
         "### Objectives\n",
-        "Imagine you have a cloud and you have to manage it such a way that load of each server wouldn't exceed 50% and add more servers in other case. To automate this process you need to create Load Balancer.\n",
+        "Imagine you have a cloud and you have to manage it such a way that there are enough servers to serve incoming connections. To automate this process you need to create Load Balancer.\n",
         "\n",
         "---\n",
         "\n",
         "### Goal of the project\n",
-        "To create a Load Balancer that ensures that there are enough servers to serve incoming connections.\n",
+        "To create a Load Balancer that ensure that load of each server wouldn't exceed 50% and add more servers in other case.\n",
         "\n",
         "### Technique\n",
         "For this project we will use fundamental concepts of Object-Oriented Programming like classes and composition.\n",
