--- a/LoadBalancer.ipynb
+++ b/LoadBalancer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOe7MoJNIZv4vIiGzsNciL6",
+      "authorship_tag": "ABX9TyNqo70YCyX4x/FFuxj5oPcR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "source": [
         "\n",
         "### Objectives\n",
-        "Imagine you have a cloud and you have to manage it such a way that there are enough servers to serve incoming connections. To automate this process you need to create Load Balancer.\n",
+        "Imagine you have a cloud and you have to manage it such a way that there are enough available servers to serve incoming connections. Load Balancer will help you to automate this proceess.\n",
         "\n",
         "---\n",
         "\n",
